fixed spacing between content and header

--- a/packages/app/src/theme/overrides.scss
+++ b/packages/app/src/theme/overrides.scss
@@ -5,7 +5,6 @@
   border-right: 10px solid red;
   max-width: 1366px;
   margin: auto;
-  min-height: 100vh;
 }
 
 ion-content::part(scroll) {
